@@ -17,6 +17,7 @@
 #include "apr.h"
 #include "apr_dso.h"
 #include "apu.h"
+#include "apu_errno.h"
 
 #ifndef APU_INTERNAL_H
 #define APU_INTERNAL_H
@@ -39,7 +40,7 @@ apr_status_t apu_dso_mutex_unlock(void);
 
 apr_status_t apu_dso_load(apr_dso_handle_t **dso, apr_dso_handle_sym_t *dsoptr,
                           const char *module, const char *modsym,
-                          apr_pool_t *pool);
+                          apr_pool_t *pool, apu_err_t *err);
 
 #ifdef __cplusplus
 }
